--- a/src/FastFit/level-1/1 - training.ipynb
+++ b/src/FastFit/level-1/1 - training.ipynb
@@ -34,16 +34,16 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 20901 entries, 0 to 20900\n",
+      "RangeIndex: 19284 entries, 0 to 19283\n",
       "Data columns (total 4 columns):\n",
       " #   Column        Non-Null Count  Dtype \n",
       "---  ------        --------------  ----- \n",
-      " 0   url           20901 non-null  object\n",
-      " 1   text          20901 non-null  object\n",
-      " 2   relevance     20901 non-null  object\n",
-      " 3   multiclasses  20901 non-null  object\n",
+      " 0   url           19284 non-null  object\n",
+      " 1   text          19284 non-null  object\n",
+      " 2   relevance     19284 non-null  object\n",
+      " 3   multiclasses  19284 non-null  object\n",
       "dtypes: object(4)\n",
-      "memory usage: 653.3+ KB\n"
+      "memory usage: 602.8+ KB\n"
      ]
     },
     {
@@ -179,12 +179,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b5ea300952a4d19aaa5167a8ba51b0c",
+       "model_id": "c24a92dd424e46539b82341d01be6c02",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/10241 [00:00<?, ?it/s]"
+       "  0%|          | 0/9448 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -193,12 +193,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c9b35ea2ff1443292b24f450bf41823",
+       "model_id": "60f09dc245a34e19a445864d7c36ca28",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/6271 [00:00<?, ?it/s]"
+       "  0%|          | 0/5786 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -207,12 +207,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6492fc96766454697f2737126aca846",
+       "model_id": "ffc5a2ade9e34c609f46a656ab4258e5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/4389 [00:00<?, ?it/s]"
+       "  0%|          | 0/4050 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -245,8 +245,9 @@
     "        .apply(lambda x: x.sample(min(num_samples_per_label,len(x)),random_state=42),include_groups=True).reset_index(drop=True)\n",
     "    )\n",
     "\n",
+    "\n",
     "if DEV:\n",
-    "    train_data = stratified_sample(train_data,num_samples_per_label=250)\n",
+    "    train_data = stratified_sample(train_data,num_samples_per_label=500)\n",
     "    val_data = val_data.sample(100,random_state=42)\n",
     "    test_data = test_data.sample(200,random_state=42)\n",
     "else:\n",
@@ -290,42 +291,42 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>659800</th>\n",
-       "      <td>18518</td>\n",
-       "      <td>https://phlconnect.ched.gov.ph/admin/uploads/a...</td>\n",
-       "      <td>: • Atomic operations • Reserve/publish • Tran...</td>\n",
+       "      <th>1604410</th>\n",
+       "      <td>18269</td>\n",
+       "      <td>http://www.urs.edu.ph/bid-opportunities/wp-con...</td>\n",
+       "      <td>default in any of its obligations under the C...</td>\n",
        "      <td>irrelevant</td>\n",
        "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>536581</th>\n",
-       "      <td>17275</td>\n",
-       "      <td>https://repositorio.upn.edu.pe/bitstream/handl...</td>\n",
-       "      <td>ra y entendible para los profesionales e invol...</td>\n",
+       "      <th>1305800</th>\n",
+       "      <td>16110</td>\n",
+       "      <td>http://repositorio.uigv.edu.pe/bitstream/handl...</td>\n",
+       "      <td>nciliación extrajudicial obligatoria. Tabla 3 ...</td>\n",
        "      <td>irrelevant</td>\n",
        "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1575204</th>\n",
-       "      <td>10748</td>\n",
-       "      <td>https://repositorio.unfv.edu.pe/bitstream/hand...</td>\n",
-       "      <td>isión del espacio en zonas para cada grupo de ...</td>\n",
+       "      <th>1102317</th>\n",
+       "      <td>4</td>\n",
+       "      <td>https://www.conservationevidence.com/synopsis/...</td>\n",
+       "      <td>Columbia, Canada (1a) found that diversionary ...</td>\n",
+       "      <td>relevant</td>\n",
+       "      <td>[Mammals]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>984695</th>\n",
+       "      <td>11127</td>\n",
+       "      <td>https://www.dbs.com/annualreports/2012/pdfs/db...</td>\n",
+       "      <td>lar reports to the AC, SGX Listing Rules in re...</td>\n",
        "      <td>irrelevant</td>\n",
        "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>263202</th>\n",
-       "      <td>12009</td>\n",
-       "      <td>https://repositorio.upn.edu.pe/bitstream/handl...</td>\n",
-       "      <td>ón Definición Dimensiones Indicadores Ítems co...</td>\n",
-       "      <td>irrelevant</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19541</th>\n",
-       "      <td>19307</td>\n",
-       "      <td>https://www.yololafco.org/files/f96ec5765/LAFC...</td>\n",
-       "      <td>the law of the State of California, and Magell...</td>\n",
+       "      <th>503363</th>\n",
+       "      <td>12539</td>\n",
+       "      <td>http://2017.xcoax.org/xCoAx2017.pdf</td>\n",
+       "      <td>rithmic creation. Such an approach may give fr...</td>\n",
        "      <td>irrelevant</td>\n",
        "      <td>[]</td>\n",
        "    </tr>\n",
@@ -339,82 +340,82 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>259178</th>\n",
-       "      <td>12660</td>\n",
-       "      <td>https://www.wjec.paris/wp-content/uploads/2020...</td>\n",
-       "      <td>ying to help communities develop civic capacit...</td>\n",
+       "      <td>15596</td>\n",
+       "      <td>https://www.deped.gov.ph/wp-content/uploads/PB...</td>\n",
+       "      <td>s and Awards Committee (BAC), Technical Workin...</td>\n",
        "      <td>irrelevant</td>\n",
        "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1414414</th>\n",
-       "      <td>16282</td>\n",
-       "      <td>https://www.investinperu.pe/RepositorioAPS0/0/...</td>\n",
-       "      <td>2 , cI ul uI uuul L2 LR0 SBg2 ~ c cNP 7 ORLLR2...</td>\n",
+       "      <td>10248</td>\n",
+       "      <td>https://budget.finance.go.ug/sites/default/fil...</td>\n",
+       "      <td>0 371,649 Total Cost of Environment and Natura...</td>\n",
        "      <td>irrelevant</td>\n",
        "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>131932</th>\n",
-       "      <td>10649</td>\n",
-       "      <td>https://ymcamalta.org/wp-content/uploads/2024/...</td>\n",
-       "      <td>ys the social network of the affected individu...</td>\n",
+       "      <td>9900</td>\n",
+       "      <td>https://www.unm.edu.pe/wp-content/uploads/2020...</td>\n",
+       "      <td>Piano Alumnos del profesor Erick Pajares Maes...</td>\n",
        "      <td>irrelevant</td>\n",
        "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>671155</th>\n",
-       "      <td>19384</td>\n",
-       "      <td>https://documents1.worldbank.org/curated/en/16...</td>\n",
-       "      <td>a capacity assessment study and select trainin...</td>\n",
+       "      <td>13722</td>\n",
+       "      <td>https://revistas.ulcb.edu.pe/numeros_completos...</td>\n",
+       "      <td>la salsa huancaína Marca Alacena. Figura 2. E...</td>\n",
        "      <td>irrelevant</td>\n",
        "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>121958</th>\n",
-       "      <td>16851</td>\n",
-       "      <td>https://finance.go.ug/sites/default/files/arch...</td>\n",
-       "      <td>T 16 | SUSTAINABLE URBANISATION AND HOUSING P...</td>\n",
+       "      <td>11332</td>\n",
+       "      <td>https://repositorio.upla.edu.pe/bitstream/hand...</td>\n",
+       "      <td>omporta necesariamente la ocurrencia del efect...</td>\n",
        "      <td>irrelevant</td>\n",
        "      <td>[]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1660297 rows × 5 columns</p>\n",
+       "<p>1678606 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "         chunk_id                                                url  \\\n",
-       "659800      18518  https://phlconnect.ched.gov.ph/admin/uploads/a...   \n",
-       "536581      17275  https://repositorio.upn.edu.pe/bitstream/handl...   \n",
-       "1575204     10748  https://repositorio.unfv.edu.pe/bitstream/hand...   \n",
-       "263202      12009  https://repositorio.upn.edu.pe/bitstream/handl...   \n",
-       "19541       19307  https://www.yololafco.org/files/f96ec5765/LAFC...   \n",
+       "1604410     18269  http://www.urs.edu.ph/bid-opportunities/wp-con...   \n",
+       "1305800     16110  http://repositorio.uigv.edu.pe/bitstream/handl...   \n",
+       "1102317         4  https://www.conservationevidence.com/synopsis/...   \n",
+       "984695      11127  https://www.dbs.com/annualreports/2012/pdfs/db...   \n",
+       "503363      12539                http://2017.xcoax.org/xCoAx2017.pdf   \n",
        "...           ...                                                ...   \n",
-       "259178      12660  https://www.wjec.paris/wp-content/uploads/2020...   \n",
-       "1414414     16282  https://www.investinperu.pe/RepositorioAPS0/0/...   \n",
-       "131932      10649  https://ymcamalta.org/wp-content/uploads/2024/...   \n",
-       "671155      19384  https://documents1.worldbank.org/curated/en/16...   \n",
-       "121958      16851  https://finance.go.ug/sites/default/files/arch...   \n",
+       "259178      15596  https://www.deped.gov.ph/wp-content/uploads/PB...   \n",
+       "1414414     10248  https://budget.finance.go.ug/sites/default/fil...   \n",
+       "131932       9900  https://www.unm.edu.pe/wp-content/uploads/2020...   \n",
+       "671155      13722  https://revistas.ulcb.edu.pe/numeros_completos...   \n",
+       "121958      11332  https://repositorio.upla.edu.pe/bitstream/hand...   \n",
        "\n",
        "                                                      text   relevance  \\\n",
-       "659800   : • Atomic operations • Reserve/publish • Tran...  irrelevant   \n",
-       "536581   ra y entendible para los profesionales e invol...  irrelevant   \n",
-       "1575204  isión del espacio en zonas para cada grupo de ...  irrelevant   \n",
-       "263202   ón Definición Dimensiones Indicadores Ítems co...  irrelevant   \n",
-       "19541    the law of the State of California, and Magell...  irrelevant   \n",
+       "1604410   default in any of its obligations under the C...  irrelevant   \n",
+       "1305800  nciliación extrajudicial obligatoria. Tabla 3 ...  irrelevant   \n",
+       "1102317  Columbia, Canada (1a) found that diversionary ...    relevant   \n",
+       "984695   lar reports to the AC, SGX Listing Rules in re...  irrelevant   \n",
+       "503363   rithmic creation. Such an approach may give fr...  irrelevant   \n",
        "...                                                    ...         ...   \n",
-       "259178   ying to help communities develop civic capacit...  irrelevant   \n",
-       "1414414  2 , cI ul uI uuul L2 LR0 SBg2 ~ c cNP 7 ORLLR2...  irrelevant   \n",
-       "131932   ys the social network of the affected individu...  irrelevant   \n",
-       "671155   a capacity assessment study and select trainin...  irrelevant   \n",
-       "121958    T 16 | SUSTAINABLE URBANISATION AND HOUSING P...  irrelevant   \n",
+       "259178   s and Awards Committee (BAC), Technical Workin...  irrelevant   \n",
+       "1414414  0 371,649 Total Cost of Environment and Natura...  irrelevant   \n",
+       "131932    Piano Alumnos del profesor Erick Pajares Maes...  irrelevant   \n",
+       "671155    la salsa huancaína Marca Alacena. Figura 2. E...  irrelevant   \n",
+       "121958   omporta necesariamente la ocurrencia del efect...  irrelevant   \n",
        "\n",
        "        multiclasses  \n",
-       "659800            []  \n",
-       "536581            []  \n",
-       "1575204           []  \n",
-       "263202            []  \n",
-       "19541             []  \n",
+       "1604410           []  \n",
+       "1305800           []  \n",
+       "1102317    [Mammals]  \n",
+       "984695            []  \n",
+       "503363            []  \n",
        "...              ...  \n",
        "259178            []  \n",
        "1414414           []  \n",
@@ -422,7 +423,7 @@
        "671155            []  \n",
        "121958            []  \n",
        "\n",
-       "[1660297 rows x 5 columns]"
+       "[1678606 rows x 5 columns]"
       ]
      },
      "execution_count": 6,
@@ -440,46 +441,32 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Dataset({\n",
-       "    features: ['chunk_id', 'url', 'text', 'relevance', 'multiclasses', '__index_level_0__'],\n",
-       "    num_rows: 1660297\n",
-       "})"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "Dataset.from_pandas() got an unexpected keyword argument 'keep_in_memory'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Dataset\n\u001b[0;32m----> 3\u001b[0m train_dataset \u001b[38;5;241m=\u001b[39m \u001b[43mDataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_pandas\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msplit\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtrain\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mkeep_in_memory\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m test_dataset \u001b[38;5;241m=\u001b[39m Dataset\u001b[38;5;241m.\u001b[39mfrom_pandas(test_data, split\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m\"\u001b[39m,keep_in_memory\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      5\u001b[0m val_dataset \u001b[38;5;241m=\u001b[39m Dataset\u001b[38;5;241m.\u001b[39mfrom_pandas(val_data, split\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mval\u001b[39m\u001b[38;5;124m\"\u001b[39m,keep_in_memory\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: Dataset.from_pandas() got an unexpected keyword argument 'keep_in_memory'"
+     ]
     }
    ],
    "source": [
     "from datasets import Dataset\n",
     "\n",
-    "train_dataset = Dataset.from_pandas(train_data, split=\"train\")\n",
-    "test_dataset = Dataset.from_pandas(test_data, split=\"test\")\n",
-    "val_dataset = Dataset.from_pandas(val_data, split=\"val\")\n",
+    "train_dataset = Dataset.from_pandas(train_data, split=\"train\",keep_in_memory=True)\n",
+    "test_dataset = Dataset.from_pandas(test_data, split=\"test\",keep_in_memory=True)\n",
+    "val_dataset = Dataset.from_pandas(val_data, split=\"val\",keep_in_memory=True)\n",
     "\n",
     "train_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#! had to modify FastFitTrainer to at /fastfit/train.py, line 879, to add trust_remote_code=True to the loading of 'accuracy' metrics\n",
@@ -535,16 +522,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "07/29/2024 11:14:40 - WARNING - fastfit.train - Process rank: 0, device: cuda:0, n_gpu: 1distributed training: True, 16-bits training: True\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -554,56 +534,21 @@
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc33311775de4779aab4c83c8cf241f9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Running tokenizer on dataset to infer max length for both query and document:   0%|          | 0/1660297 [00:0…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "07/29/2024 13:50:06 - WARNING - fastfit.train - Process rank: 0, device: cuda:0, n_gpu: 1distributed training: True, 16-bits training: True\n"
+     ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e11b84505bc34f5793e5a137baadadc5",
+       "model_id": "674484db549445099cb0c61d4bf50923",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Running tokenizer on dataset to infer max length for both query and document:   0%|          | 0/500 [00:00<?,…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8895eb5c07db413c97a3d98d8f971de7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Running tokenizer on dataset to infer max length for both query and document:   0%|          | 0/1001094 [00:0…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c21b959313d74180be135002c90d9ae4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Running tokenizer on dataset:   0%|          | 0/1660297 [00:00<?, ? examples/s]"
+       "Running tokenizer on dataset to infer max length for both query and document:   0%|          | 0/1678606 [00:0…"
       ]
      },
      "metadata": {},
